testing widhth issue on mobile

--- a/src/sass/site.scss
+++ b/src/sass/site.scss
@@ -438,7 +438,7 @@ footer {
 	    				font-size: $font-size-small;
 					    text-transform: uppercase;
 					    font-weight: $semi-bold;
-					    white-space: nowrap;
+					    // white-space: nowrap;
 
 				    	&:after {
 				    		background-color: $primary-color;
